--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: http://mazhuang.org
+url: 
 date_format: "ordinal"
-title: 码志
-subtitle: "打码改变人生"
-description: "马壮的个人博客"
-keywords: 码志, Zhuang Ma, mzlogin, mazhuang
+title: Toy
+subtitle: "折腾玩具的地方"
+description: "Hanpc的个人博客"
+keywords: Toy, Hanpc , 个人博客
 favicon: /favicon.ico
 timezone: Asia/Shanghai
 encoding: "utf-8"
@@ -16,12 +16,12 @@ side_bar_repo_limit: 5
 # ---------------- #
 #      Author      #
 # ---------------- #
-author: Zhuang Ma
-organization: zkh360.com
-organization_url: http://www.zkh360.com
-github_username: mzlogin
-location: Wuhan, China
-email: chumpma@gmail.com
+author: Hanpc
+organization: sei.buaa.edu.cn
+organization_url: sei.buaa.edu.cn
+github_username: ihaibara
+location: Beijing, China
+email: ishiho@qq.com
 
 # ---------------- #
 #    Navigation    #
@@ -89,17 +89,17 @@ comments_provider: gitment
 # !!!Important!!! Please modify infos below to yours
 # https://disqus.com
 disqus:
-    username: mzlogin
+    username: 
 # https://gentie.163.com
 netease_gentie:
-    productKey: 560ed243b708465d82d5a0a5f3b83da1
+    productKey: 
 # https://imsun.net/posts/gitment-introduction/
 gitment:
-    owner: mzlogin
-    repo: blog-comments
+    owner: ihaibara
+    repo: all-blog-comments
     oauth:
-        client_id: d2e1cbbd298958076462
-        client_secret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
+        client_id: a6b0396d4e0b29c9a5ee
+        client_secret: f3b0cf8e8e6956a5afeccbca5197f9540befd5ff
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : true
 
