--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,11 +1,8 @@
-- name: Connie 酱
-  url: https://connie99.github.io
+- name: lixiaocong
+  url: http://www.lixiaocong.com/blog
 
-- name: 只宁静不致远
-  url: http://zxning.github.io
+- name: aynoel
+  url: https://ayonel.me
 
-- name: Blog Something
-  url: http://chenxiaoyoyo.github.io
-
-- name: 码志
+- name: 码志（我的博客的样式来源）
   url: http://mazhuang.org
