--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ side_bar_repo_limit: 5
 #      Author      #
 # ---------------- #
 author: Hanpc
-organization: sei.buaa.edu.cn
-organization_url: sei.buaa.edu.cn
+organization: Beihang University
+organization_url: http://scse.buaa.edu.cn
 github_username: ihaibara
 location: Beijing, China
 email: ishiho@qq.com
