--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: "Hanpc的个人博客"
 keywords: Toy, Hanpc , 个人博客
 favicon: /favicon.ico
 timezone: Asia/Shanghai
-encoding: "utf-8"
+encoding: bom|utf-8
 side_bar_repo_limit: 5
 
 # ---------------- #
